# dotfiles

./: .chezmoi.toml.tmpl  .chezmoidata.yaml  .chezmoiignore  .chezmoiremove  .claude.json  .envrc.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .ripgreprc  .stow-local-ignore  .stowrc  .terraform-docs.yml  .tflint.hcl  AGENTS.md  Brewfile  CLAUDE.md  CONTEXT.md  DOTFILES_CONTEXT.md  Makefile  README.md  TODO.md  Taskfile.yml  bootstrap.sh  dot-claude.json  dot-gitconfig  dot-gitconfig-work  dot-zshenv  dot-zshrc  dot_mrtrust  dot_zshenv.tmpl  dot_zshrc  go.mod  go.sum  key.txt.age  mise.toml  refactor-phase-1.md  refactor_phase_3.md  renovate.json  setup.sh
infra/: Taskfile.yml  pyproject.toml  tofu.Taskfile.yml
infra/ansible/: README.md  ansible.cfg  requirements.yml
infra/atlas/: Taskfile.yml
infra/aws/: README.md  Taskfile.yml
infra/identity/: Taskfile.yml
infra/network/: Taskfile.yml
infra/schemas/: audiobookshelf.schema.json  backrest.schema.json  openwrt.schema.json  secret-metadata.schema.json  syncthing.schema.json  truenas-app.schema.json  truenas-maintenance.schema.json  truenas-nfs.schema.json  truenas-smb.schema.json  truenas-snapshots.schema.json
infra/secrets/: README.md  homeserver-secrets  homeserver.bws.yaml
infra/sync/: Taskfile.yml
infra/terraform/: README.md
infra/tests/: test_api_keys.py  test_apple_photos.py  test_apps.py  test_audiobookshelf.py  test_backrest.py  test_cli.py  test_desired_state.py  test_maintenance.py  test_nfs.py  test_openwrt.py  test_openwrt_controller.py  test_openwrt_health.py  test_runtime.py  (+14 more)
(+1694 files in other folders)
