[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homeserver-iac"
version = "0.1.0"
description = "Typed desired-state contracts for homeserver infrastructure"
requires-python = ">=3.13,<3.14"
dependencies = [
  "pydantic>=2.12,<3",
  "pyyaml>=6.0,<7",
]

[dependency-groups]
dev = [
  "ansible-core>=2.20,<2.21",
  "mypy>=1.19,<2",
  "pytest>=9.0,<10",
  "ruff>=0.15,<0.16",
  "types-pyyaml>=6.0,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/homeserver_iac"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]
